Introduced better looking login dialog

--- a/src/main/webapp/pages/system.xhtml
+++ b/src/main/webapp/pages/system.xhtml
@@ -13,6 +13,8 @@
 
 
         <h:form>
+            <p:growl id="growl" life="5000" />
+            
             <h1>Online: System Availability Monitoring!</h1>
 
             <h2>Systems</h2>
