--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="0; URL=pages/system.jsf">
+<meta http-equiv="Refresh" content="0; URL=pages/index.xhtml">
 </head>
 </html>
