--- a/src/main/webapp/loginError.xhtml
+++ b/src/main/webapp/loginError.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <ui:composition template="/templates/grid.xhtml">
+    <ui:composition template="/templates/loggedout.xhtml">
         <ui:define name="title">Online: Login Error</ui:define>
             <div id="select-one" data-alert="" class="alert-box alert">
                 Please, check your username and password.
