--- a/src/main/webapp/whoami.xhtml
+++ b/src/main/webapp/whoami.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <ui:composition template="/templates/grid.xhtml">
+    <ui:composition template="/templates/loggedout.xhtml">
         <ui:define name="title">Online: Login Error</ui:define>
             <div id="select-one" data-alert="" class="alert-box success">
                 <h:outputText value="#{request.userPrincipal.name}" />
