--- a/src/main/webapp/pages/list.xhtml
+++ b/src/main/webapp/pages/list.xhtml
@@ -48,7 +48,7 @@
                 <li><a href="javascript:DataTablesExt.editClick();" class="small button">Edit</a></li>
             </ul>
 
-            <script type="text/javascript" src="index.js"></script>
+            <script type="text/javascript" src="list.js"></script>
         </ui:define>
     </ui:composition>
 </html>
