Fixes. Logout works.

--- a/src/main/webapp/pages/logout.xhtml
+++ b/src/main/webapp/pages/logout.xhtml
@@ -13,7 +13,7 @@
         <ui:define name="header">Logout</ui:define>
 
         <ui:define name="body">
-            <h1>You have been logged out.</h1>
+            <h3><a href="#{request.contextPath}/">You have been logged out. Please, log in again here</a></h3>
         </ui:define>
     </ui:composition>
 </html>
