--- a/src/main/webapp/pages/edit.xhtml
+++ b/src/main/webapp/pages/edit.xhtml
@@ -89,6 +89,14 @@
                     </table>
                 </div>
             </div>
+            
+            <div class="row">
+                <div class="small-12 columns">
+                    <ul class="button-group">
+                        <li><a href="#{request.contextPath}/pages/list.xhtml" class="small button">Back</a></li>
+                    </ul>
+                </div>
+            </div>
 
             <script type="text/javascript" src="edit.js"></script>
         </ui:define>
